# Decimator

./: CMakeLists.txt  Decimator Plan.md  README.md  build.bat
src/: QuadricEdgeCollapse.cpp  QuadricEdgeCollapse.hpp  main.cpp  stl_io.cpp  stl_io.h  types.h
